# phantom

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  strict.yaml
examples/: detection_pipeline.py  sigma_rules.py  threat_hunting.py
rules/: credential_dumping.yml  lateral_movement.yml  suspicious_powershell.yml
src/phantom/: __init__.py  cli.py  engine.py
src/phantom/api/: __init__.py  server.py
src/phantom/correlation/: __init__.py  graph.py
src/phantom/detection/: __init__.py  anomaly.py  sigma_engine.py
src/phantom/hunting/: __init__.py  hunter.py
src/phantom/ingestion/: __init__.py  pipeline.py
src/phantom/mitre/: __init__.py  mapper.py
src/phantom/utils/: logging.py
tests/: test_anomaly.py  test_correlation.py  test_hunting.py  test_mitre.py  test_pipeline.py  test_sigma.py
