[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantom-detect"
version = "0.1.0"
description = "AI-Powered Detection Engineering & Autonomous Threat Hunting Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andrew Stafford" }]
keywords = ["detection-engineering", "threat-hunting", "MITRE-ATT&CK", "SIEM", "anomaly-detection", "sigma"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "numpy>=1.26",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "scikit-learn>=1.4",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.8"]
ml = ["torch>=2.1", "transformers>=4.36"]

[project.scripts]
phantom = "phantom.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
